--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 </head>
 <body>
   <div class="countdown" id="countdown">
+    <img src="submarine.png">
+    <img src="crossbones.png">
     <span class="days"></span> days
     <span class="hours"></span> hours
     <span class="minutes"></span> minutes
