--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
   <div class="countdown" id="countdown">
     <img src="submarine.png">
-    <img src="crossbones.png">
+    <img src="crossbones.png"><br />
     <span class="days"></span> days
     <span class="hours"></span> hours
     <span class="minutes"></span> minutes
