--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 </head>
 <body>
   <div class="countdown" id="countdown">
-    <img src="submarine.png">
-    <img src="crossbones.png"><br />
+    <img src="submarine.png" style="width: 100px">
+    <img src="crossbones.png" style="width: 100px">
     <span class="days"></span> days
     <span class="hours"></span> hours
     <span class="minutes"></span> minutes
