--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <img src="submarine.png" style="width: 100px">
     <img src="crossbones.png" style="width: 100px">
     <span class="days"></span> days
-    <span class="hours"></span> hours
-    <span class="minutes"></span> minutes
-    <span class="seconds"></span> seconds
+    <span class="hours"></span> hrs
+    <span class="minutes"></span> mins
+    <span class="seconds"></span> secs
   </div>
 </body>
 </html>
